--- a/css/main.css
+++ b/css/main.css
@@ -928,6 +928,223 @@ input[type=checkbox]:checked:after {
     .in-menu-list ul li:focus a {
       color: #ffc35f; }
 
+.map-block {
+  display: table;
+  width: 100%; }
+
+.map-block > div {
+  display: table-cell;
+  vertical-align: top; }
+
+.map-bor {
+  width: 50%;
+  height: 700px; }
+
+.right-map {
+  height: 100%; }
+
+.left-map {
+  width: 50%; }
+
+.search-results {
+  padding: 0 15px;
+  height: 700px;
+  overflow: auto; }
+
+::-webkit-scrollbar-track {
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar {
+  width: 4px;
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar-thumb {
+  background-color: #adadad; }
+
+#map {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0; }
+
+.ymap-placemark-container {
+  position: relative; }
+
+.ymap-placemark-container .ymap-placemark {
+  position: relative;
+  left: -18px;
+  top: -40px;
+  display: block;
+  width: 36px;
+  padding: 2px;
+  background-color: #fff;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2); }
+
+.ymap-placemark-container .ymap-placemark:after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  z-index: 200;
+  margin-left: -4px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 0;
+  border-color: #fff transparent transparent; }
+
+.ymap-placemark-container .ymap-placemark img {
+  width: 32px;
+  height: 32px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 3px; }
+
+.ymap-placemark-container.hover .ymap-placemark {
+  width: 180px;
+  height: 66px;
+  top: -74px;
+  left: -90px;
+  padding: 8px;
+  background-color: #fff; }
+
+.ymap-placemark-container.hover .ymap-placemark:after {
+  margin-left: -6px;
+  border-width: 8px 8px 0; }
+
+.ymap-placemark-container.hover .ymap-placemark img {
+  width: 50px;
+  height: 50px; }
+
+.ymap-placemark-container.hover .ymap-placemark .ymap-placemark-content {
+  position: absolute;
+  left: 66px;
+  top: 8px;
+  width: 106px; }
+
+.ymap-placemark-container.hover .ymap-placemark .ymap-placemark-content h3 {
+  margin: 0;
+  font-size: 14px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding-bottom: 1px;
+  color: #0069c4;
+  font-weight: 700; }
+
+.ymap-placemark-container.hover .ymap-placemark .ymap-placemark-content span {
+  display: block;
+  margin-top: -1px;
+  font-size: 12px;
+  font-weight: 600;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  color: rgba(0, 0, 0, 0.4); }
+
+.ymap-placemark-container.hover .ymap-placemark .ymap-placemark-content .ymap-placemark-rating {
+  margin-top: 0;
+  color: #face02; }
+
+.place.place-li {
+  position: relative;
+  margin-bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ededed; }
+  .place.place-li a {
+    color: #00adff; }
+
+.place.place-li:after, .place.place-li:before {
+  content: " ";
+  display: table; }
+
+.place.place-li:after {
+  clear: both; }
+
+.place.place-li .place-left {
+  width: 95px;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 0; }
+
+.place.place-li .place-images > img.front, .place.place-li .place-img {
+  width: 100%;
+  height: 90px;
+  border-top: 2px solid #fff; }
+
+.place.place-li .place-images {
+  width: 100%;
+  height: 90px;
+  position: relative; }
+
+.place.place-li .place-images > img {
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover; }
+
+.place.place-li .place-images > img.front {
+  top: 0;
+  left: 0;
+  z-index: 2; }
+
+.place.place-li .place-images > img.back {
+  width: 91px;
+  height: 88px;
+  top: -2px;
+  left: 2px;
+  z-index: 1; }
+
+.place.place-li .place-promoted {
+  margin-top: 10px;
+  color: #cb9f27;
+  font-size: 12px; }
+
+.place.place-li .place-body .place-title {
+  margin: 0 0 1px;
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 1px;
+  padding-right: 100px; }
+
+.place.place-li .place-body .place-rating {
+  position: absolute;
+  right: 0;
+  top: 20px;
+  font-size: 16px;
+  font-weight: 400; }
+
+.place.place-li .place-body .place-address {
+  color: #999; }
+
+.pre-d {
+  position: relative;
+  margin-left: 7px;
+  padding-left: 11px; }
+
+.pre-d:before {
+  display: block;
+  width: 2px;
+  height: 2px;
+  content: '.';
+  position: absolute;
+  left: 0;
+  top: -2px;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 700;
+  color: inherit; }
+
+.icon-star-large-active {
+  background: url("../img/sprite.svg") no-repeat 52.69461% 89.72603%;
+  width: 18px;
+  height: 17px;
+  display: inline-block;
+  vertical-align: middle; }
+
 @media (max-width: 991px) {
   .tilte-slid {
     font-size: 50px; }
@@ -977,7 +1194,17 @@ input[type=checkbox]:checked:after {
   .item-img img {
     height: 400px; }
   .item-inter {
-    width: 100%; } }
+    width: 100%; }
+  .map-block {
+    display: block; }
+  .map-block > div {
+    display: block;
+    width: 100% !important; }
+  .search-results {
+    height: auto;
+    padding: 0; }
+  .sorts {
+    margin-bottom: 20px; } }
 
 @media (max-width: 767px) {
   .box-white {
@@ -1030,4 +1257,16 @@ input[type=checkbox]:checked:after {
   .item-inter > div p {
     font-size: 32px; }
   .sorts a {
-    margin: 10px 10px 0 0; } }
+    margin: 10px 10px 0 0; }
+  .place.place-li {
+    padding-top: 55px;
+    padding-left: 20px;
+    padding-right: 20px; }
+  .place.place-li .place-body .place-title {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    max-width: calc(100% - 40px);
+    padding-right: 0; }
+  .place.place-li .place-body .place-rating {
+    position: static; } }
